# LOCALTRIAGE

./: .env.example  .gitignore  README.md  docker-compose.yml  note.txt  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  e2e-tests.yml  pr-checks.yml
data/indices/: .gitkeep
data/models/classifier_model/: category_classifier.joblib  category_encoder.joblib  metadata.json  priority_classifier.joblib  priority_encoder.joblib  vectorizer.joblib
data/processed/: classifier_training_data.json  evaluation_dataset.json  evaluation_results.json
data/raw/: knowledge_base_articles.json  sample_tickets.csv  sample_tickets.json
docs/: BRD.md  CONTEXT.md  RETROSPECTIVE.md  architecture.md  baseline_audit_report.md  decision_matrix.md  index.html  mindmap.md  perf_report.md  portfolio.html  presentation_soutenance.md  project_plan.md  risk_register.md  slides_soutenance.html
infra/docker/: Dockerfile  Dockerfile.llm  Dockerfile.streamlit
infra/monitoring/: prometheus.yml
notebooks/: ingestion.ipynb  insights_report.ipynb
reports/: .gitkeep  baseline_measurements.json  evaluation_results.json
scripts/: load_data.py  run_evaluation.py
src/: __init__.py
src/api/: api.py
src/evaluation/: eval_harness.py
src/ingestion/: ingest.py  schema.sql
src/rag/: drafter.py
src/retrieval/: baseline_bm25.py  vector_search.py
src/triage/: baseline_classifier.py
src/ui/: app.py
tests/: __init__.py  test_api.py  test_data_validation.py  test_integration.py  test_unit.py
tests/e2e/: README.md  postman_collection.json  postman_environment_local.json  postman_environment_staging.json  run_e2e_tests.sh  test_e2e.py
tests/fixtures/: __init__.py  test_data.py
