[project]
name = "localtriage"
version = "1.0.0"
description = "A self-hosted, privacy-preserving customer support triage platform powered by local LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "LOCALTRIAGE Team" }
]
keywords = [
    "customer-support",
    "triage",
    "llm",
    "rag",
    "nlp",
    "machine-learning",
    "fastapi",
    "self-hosted",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Customer Service",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Database
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    
    # Machine Learning & NLP - Embeddings
    "sentence-transformers>=2.3.0",
    "transformers>=4.37.0",
    
    # Vector Search
    "faiss-cpu>=1.7.4",
    "qdrant-client>=1.7.0",
    
    # Classical ML
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    
    # Text Processing
    "nltk>=3.8.1",
    "regex>=2023.12.25",
    
    # Data Processing
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    
    # HTTP & API
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    
    # UI
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    
    # Evaluation & Metrics
    "rouge-score>=0.1.2",
    
    # Configuration & Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

all = [
    "localtriage[dev,notebooks]",
]

[project.urls]
Homepage = "https://github.com/Septimus4/LOCALTRIAGE"
Documentation = "https://github.com/Septimus4/LOCALTRIAGE#readme"
Repository = "https://github.com/Septimus4/LOCALTRIAGE"
Issues = "https://github.com/Septimus4/LOCALTRIAGE/issues"

[project.scripts]
localtriage = "src.api.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# =============================================================================
# uv configuration
# =============================================================================
[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

# =============================================================================
# Ruff - Fast Python linter
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B009",   # do not call getattr with a constant attribute value
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# =============================================================================
# Black - Code formatter
# =============================================================================
[tool.black]
target-version = ["py311", "py312"]
line-length = 100
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

# =============================================================================
# isort - Import sorter
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
skip = [".venv", "__pycache__"]

# =============================================================================
# MyPy - Static type checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "notebooks/",
]

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "sentence_transformers.*",
    "faiss.*",
    "qdrant_client.*",
    "streamlit.*",
    "plotly.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest - Testing
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
